desktop screenshot styling

--- a/portfolio-aall.html
+++ b/portfolio-aall.html
@@ -40,11 +40,15 @@
     <main  id="barba-wrapper" role="main">
         <div class="barba-container">
             <span class="nav prev"><a class="button" href="index.html">last project</a></span>
-            <span class="nav next"><a class="button" href="portfolio-remstep.html">next project</a></span>
+            <span class="nav next"><a class="button" href="portfolio-nvses.html">next project</a></span>
             <article>
                 <h2>aallconfereence2017.com.au</h2>
                 <figure class="desktop">
-                    <img src="img/screencapture-contemporaryvcebiology-2018-06-11-16_07_44.png" alt="contemporaryvcebiolgy.com screen shot"/>
+                    <div class="wrapper">
+                        <div class="img-wrapper">
+                            <img src="img/screencapture-aallconference2017-au-2018-06-22-17_37_34.png" alt="aallconference2017.com.au screen shot"/>
+                        </div>
+                    </div>
                 </figure>
             </article>
         </div>
