--- a/portfolio-nvses.html
+++ b/portfolio-nvses.html
@@ -39,14 +39,14 @@
     </header>
     <main  id="barba-wrapper" role="main">
         <div class="barba-container">
-            <span class="prev disabled"><span class="button" href="index.html">last project</span></span>
-            <span class="next"><a class="button" href="portfolio-aall.html">next project</a></span>
+            <span class="nav prev"><a class="button" href="index.html">last project</a></span>
+            <span class="nav next"><a class="button" href="portfolio-remstep.html">next project</a></span>
             <article>
-                <h2>contemporaryVCEbiology.com</h2>
+                <h2>nvses.edu.au/</h2>
                 <figure class="desktop">
                     <div class="wrapper">
                         <div class="img-wrapper">
-                            <img src="img/screencapture-contemporaryvcebiology-2018-06-11-16_07_44.png" alt="contemporaryvcebiolgy.com screen shot"/>
+                            <img src="img/screencapture-nvses-edu-au-2018-06-22-18_51_40.png" alt="aallconference2017.com.au screen shot"/>
                         </div>
                     </div>
                 </figure>
