--- a/portfolio-nvses.html
+++ b/portfolio-nvses.html
@@ -53,6 +53,16 @@
             </article>
         </div>
     </main>
+    <div class="scroll-nav">
+        <div>
+            <p><a href="/">needawebguy.com</a></p>
+            <ul>
+                <li><a class="current no-barba" href="index.html">Portfolio</a></li>
+                <li><a class="no-barba" href="">About me</a></li>
+                <li><a class="no-barba" href="">Contact me</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="overlay"></div>
     
 
