--- a/about-me/index.html
+++ b/about-me/index.html
@@ -5,3 +5,6 @@ title: About me
 description:
 
 ---
+<article>
+    <h1>I design and build simple and elegant responsive web experiences</h1>
+</article>
