--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 layout: portfolio
 title: Need a web guy
-description:
+description: Freelance web design by Albert J Penticoss
 prevProject: none
 nextProject: remstep.html
 ---
@@ -22,5 +22,9 @@ nextProject: remstep.html
     <div class="description">
         <p><a class="goto button" href="https://contemporaryvcebiology.com/" target="_blank" title="opens in new tab">Visit site</a></p>
         <p>Website and associated online resources for teachers of VCE Biology.</p>
+        <h3>Responsibilities</h3>
+        <ul>
+            <li>Design</li>
+        </ul>
     </div>
 </article>
