--- a/about-me/index.html
+++ b/about-me/index.html
@@ -7,4 +7,10 @@ description:
 ---
 <article>
     <h1>I design and build simple and elegant responsive web experiences</h1>
+    <div class="body">
+        <p class="intro">I am <b>Albert Penticoss</b>, a web designer based in <b>Melbourne, Australia</b>.</p>
+        <p>I have worked in the web industry for over 10 years, with much of my time working for Universities, but also for digital agencies as both an employee and freelance contractor.</p>
+        <p>I also work diectly with clients under the business name Need a web guy.</p>
+        <p>I specialise in design and writing HTML and CSS. I use Javascript (mainly JQuery) minimally as required for the solution.</p>
+    </div>
 </article>
