--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@ nextProject: remstep.html
     </figure>
     <div class="description">
         <p><a class="goto button" href="https://contemporaryvcebiology.com/" target="_blank" title="opens in new tab">Visit site</a></p>
-        <p>Website and associated online resources for teachers of VCE Biology.</p>
-        <h3>Responsibilities</h3>
+        <p>Since early 2017 I have worked with Academics from the Deakin University Faculty of Arts and Education, to bring to life several resources aimed at helping VCE Biology teachers deliver contemporary units of study&mdash;aligned with the current accredited curriculum.</p>
+        <p>This freelance project was a follow on from the work I did for the <a href="/portfoli/remstep.html/">ReMSTEP project</a>.</p>
+        <h3>Features</h3>
         <ul>
-            <li>Design</li>
+            <li>Static website built with Jekyll</li>
+            <li>Hosted on GitHub</li>
         </ul>
     </div>
 </article>
