--- a/portfolio/nvses.html
+++ b/portfolio/nvses.html
@@ -11,7 +11,16 @@ nextProject: none
     <h2>nvses.edu.au</h2>
     <figure class="desktop">
         <div class="img-wrapper">
-            <img src="/img/screencapture-nvses-edu-au-2018-06-11-16_45_11.png" alt="aallconference2017.com.au screen shot"/>
+            <img src="/img/screencapture-nvses-edu-au-2018-06-11-16_45_11.png" alt="nvses.edu.au screen shot"/>
         </div>
     </figure>
+    <figure class="mobile">
+        <div class="img-wrapper">
+            <img src="/img/screencapture-nvses-edu-au-2018-06-25-15_16_22.png" alt="nvses.edu.au mobile screen shot"/>
+        </div>
+    </figure>
+    <div class="description">
+        <p><a class="goto button" href="http://nvses.edu.au/" target="_blank" title="opens in new tab">Visit site</a></p>
+        <p>This freelance project for Monash University showcases the NVSES project, which ran from 2012&ndash;2014, and provides the units of work developed for the program as an open source resource for science teachers.</p>
+    </div>
 </article>
