--- a/portfolio/remstep.html
+++ b/portfolio/remstep.html
@@ -11,7 +11,17 @@ nextProject: aall.html
     <h2>remstep.org.au</h2>
     <figure class="desktop">
         <div class="img-wrapper">
-            <img src="/img/screencapture-remstep-org-au-2018-06-11-16_44_32.png" alt="remstep.org.au screen shot"/>
+            <img src="/img/screencapture-remstep-org-au-2018-06-25-13_33_24.png" alt="remstep.org.au screen shot"/>
         </div>
     </figure>
+    <figure class="mobile">
+        <div class="img-wrapper">
+            <img src="/img/screencapture-remstep-org-au-2018-06-25-13_34_19.png" alt="contemporaryvcebiolgy.com mobile screen shot"/>
+        </div>
+    </figure>
+    <div class="description">
+        <p><a class="goto button" href="https://remstep.org.au/" target="_blank" title="opens in new tab">Visit site</a></p>
+        <p>I worked at the University of Melbourne for the ReMSTEP project from Jan 2014&ndash;Jun 2017.</p>
+        <p>I designed the project visual brand and website and evolved the website to support the various stages of the project incluing project launch, two conferences and final reporting of results.</p>
+    </div>
 </article>
