--- a/portfolio/remstep.html
+++ b/portfolio/remstep.html
@@ -14,14 +14,16 @@ nextProject: aall.html
             <img src="/img/screencapture-remstep-org-au-2018-06-25-13_33_24.png" alt="remstep.org.au screen shot"/>
         </div>
     </figure>
-    <figure class="mobile">
-        <div class="img-wrapper">
-            <img src="/img/screencapture-remstep-org-au-2018-06-25-13_34_19.png" alt="contemporaryvcebiolgy.com mobile screen shot"/>
+    <div class="r2-c3-5">
+        <figure class="mobile">
+            <div class="img-wrapper">
+                <img src="/img/screencapture-remstep-org-au-2018-06-25-13_34_19.png" alt="contemporaryvcebiolgy.com mobile screen shot"/>
+            </div>
+        </figure>
+        <div class="description">
+            <p><a class="goto button" href="https://remstep.org.au/" target="_blank" title="opens in new tab">Visit site</a></p>
+            <p>I worked at the University of Melbourne for the ReMSTEP project from Jan 2014&ndash;Jun 2017.</p>
+            <p>I designed the project visual brand and website and evolved the website to support the various stages of the project incluing project launch, two conferences and final reporting of results.</p>
         </div>
-    </figure>
-    <div class="description">
-        <p><a class="goto button" href="https://remstep.org.au/" target="_blank" title="opens in new tab">Visit site</a></p>
-        <p>I worked at the University of Melbourne for the ReMSTEP project from Jan 2014&ndash;Jun 2017.</p>
-        <p>I designed the project visual brand and website and evolved the website to support the various stages of the project incluing project launch, two conferences and final reporting of results.</p>
     </div>
 </article>
