--- a/index.html
+++ b/index.html
@@ -14,19 +14,22 @@ nextProject: remstep.html
             <img src="/img/screencapture-contemporaryvcebiology-2018-06-11-16_07_44.png" alt="contemporaryvcebiolgy.com screen shot"/>
         </div>
     </figure>
-    <figure class="mobile">
-        <div class="img-wrapper">
-            <img src="/img/screencapture-contemporaryvcebiology-2018-06-24-16_38_51.png" alt="contemporaryvcebiolgy.com mobile screen shot"/>
+    <div class="r2-c3-5">  
+        <figure class="mobile">
+            <div class="img-wrapper">
+                <img src="/img/screencapture-contemporaryvcebiology-2018-06-24-16_38_51.png" alt="contemporaryvcebiolgy.com mobile screen shot"/>
+            </div>
+        </figure>
+        <div class="description">
+            <p><a class="goto button" href="https://contemporaryvcebiology.com/" target="_blank" title="opens in new tab">Visit site</a></p>
+            <p>2017&ndash;2018</p>
+            <p>I been working with Academics from the Deakin University Faculty of Arts and Education to bring to life several online resources&mdash;aimed at helping VCE Biology teachers deliver contemporary units of study, which are aligned with the current accredited curriculum.</p>
+            <p>This freelance project was a follow on from my work with the <a href="/portfoli/remstep.html/">ReMSTEP project</a>.</p>
+            <h3>Features</h3>
+            <ul>
+                <li>Static website built with Jekyll</li>
+                <li>Hosted on GitHub</li>
+            </ul>
         </div>
-    </figure>
-    <div class="description">
-        <p><a class="goto button" href="https://contemporaryvcebiology.com/" target="_blank" title="opens in new tab">Visit site</a></p>
-        <p>Since early 2017 I have worked with Academics from the Deakin University Faculty of Arts and Education, to bring to life several resources aimed at helping VCE Biology teachers deliver contemporary units of study&mdash;aligned with the current accredited curriculum.</p>
-        <p>This freelance project was a follow on from the work I did for the <a href="/portfoli/remstep.html/">ReMSTEP project</a>.</p>
-        <h3>Features</h3>
-        <ul>
-            <li>Static website built with Jekyll</li>
-            <li>Hosted on GitHub</li>
-        </ul>
     </div>
 </article>
