--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ nextProject: remstep.html
             <img src="/img/screencapture-contemporaryvcebiology-2018-06-11-16_07_44.png" alt="contemporaryvcebiolgy.com screen shot"/>
         </div>
     </figure>
-    <div class="r2-c3-5">  
+    <div class="mobile-and-descrition">
         <figure class="mobile">
             <div class="img-wrapper">
                 <img src="/img/screencapture-contemporaryvcebiology-2018-06-24-16_38_51.png" alt="contemporaryvcebiolgy.com mobile screen shot"/>
