--- a/portfolio/aall.html
+++ b/portfolio/aall.html
@@ -2,7 +2,7 @@
 #Jekyll front matter
 
 layout: portfolio
-title: Need a web guy
+title: Portfolio | aallconfereence2017.com.au
 description:
 prevProject: remstep.html
 nextProject: nvses.html
@@ -14,7 +14,7 @@ nextProject: nvses.html
             <img src="/img/screencapture-aallconference2017-au-2018-06-11-16_47_48.png" alt="aallconference2017.com.au screen shot"/>
         </div>
     </figure>
-    <div class="r2-c3-5">
+    <div class="mobile-and-descrition">
         <figure class="mobile">
             <div class="img-wrapper">
                 <img src="/img/screencapture-aallconference2017-au-2018-06-25-15_13_51.png" alt="aallconference2017.com.au mobile screen shot"/>
@@ -22,7 +22,8 @@ nextProject: nvses.html
         </figure>
         <div class="description">
             <p><a class="goto button" href="https://aallconfereence2017.com.au/" target="_blank" title="opens in new tab">Visit site</a></p>
-            
+            <p>Launched September 2016</p>
+            <p>An academic conference website with CMS integration.</p>
         </div>
     </div>
 </article>
