--- a/portfolio/nvses.html
+++ b/portfolio/nvses.html
@@ -5,7 +5,7 @@ layout: portfolio
 title: Portfolio | nvses.edu.au
 description:
 prevProject: aall.html
-nextProject: none
+nextProject: succeedatrmit.html
 ---
 <article>
     <h2>nvses.edu.au</h2>
@@ -14,7 +14,7 @@ nextProject: none
             <img src="/img/screencapture-nvses-edu-au-2018-06-11-16_45_11.png" alt="nvses.edu.au screen shot"/>
         </div>
     </figure>
-    <div class="r2-c3-5">
+    <div class="mobile-and-descrition">
         <figure class="mobile">
             <div class="img-wrapper">
                 <img src="/img/screencapture-nvses-edu-au-2018-06-25-15_16_22.png" alt="nvses.edu.au mobile screen shot"/>
@@ -22,6 +22,7 @@ nextProject: none
         </figure>
         <div class="description">
             <p><a class="goto button" href="http://nvses.edu.au/" target="_blank" title="opens in new tab">Visit site</a></p>
+            <p>Launched Feb 2015</p>
             <p>This freelance project for Monash University showcases the NVSES project, which ran from 2012&ndash;2014, and distributes the units of work developed for the program as open source resources for science teachers.</p>
         </div>
     </div>
