--- a/contact-me/index.html
+++ b/contact-me/index.html
@@ -8,6 +8,6 @@ description:
 <article>
     <h1>Get in touch</h1>
     <div class="body">
-        <p class="intro">If you're interested in possibly engaging me in design and/or development work please email me at <a href="mailto:needawebguy@gmail.com">needawebguy@gmail.com</a></p>
+        <p class="intro">If you're interested in potentionally engaging me in design and/or development work please email me at <a href="mailto:needawebguy@gmail.com">needawebguy@gmail.com</a></p>
     </div>
 </article>
