--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ nextProject: remstep.html
 ---
 <article>
     <h2>contemporaryVCEbiology.com</h2>
-    <figure class="desktop">
+    <figure class="desktop span3">
         <div class="img-wrapper">
             <img src="/img/screencapture-contemporaryvcebiology-2018-06-11-16_07_44.png" alt="contemporaryvcebiolgy.com screen shot"/>
         </div>
@@ -22,12 +22,15 @@ nextProject: remstep.html
         </figure>
         <div class="description">
             <p><a class="goto button" href="https://contemporaryvcebiology.com/" target="_blank" title="opens in new tab">Visit site</a></p>
-            <p>2017&ndash;2018</p>
-            <p>I been working with Academics from the Deakin University Faculty of Arts and Education to bring to life several online resources&mdash;aimed at helping VCE Biology teachers deliver contemporary units of study, which are aligned with the current accredited curriculum.</p>
+            <p>2017&ndash;2018 | Freelance project</p>
+            <p>I been working with Academics from the Deakin University Faculty of Arts and Education to bring to life several online resources</p>
+            <p>This suite of websites aim to help VCE Biology teachers deliver contemporary units of study that are aligned with the current accredited curriculum.</p>
             <p>This freelance project was a follow on from my work with the <a href="/portfoli/remstep.html/">ReMSTEP project</a>.</p>
             <h3>Features</h3>
             <ul>
-                <li>Static website built with Jekyll</li>
+                <li>Responsive design</li>
+                <li>Static architecture</li>
+                <li>Built with Jekyll</li>
                 <li>Hosted on GitHub</li>
             </ul>
         </div>
