--- a/portfolio/succeedatrmit.html
+++ b/portfolio/succeedatrmit.html
@@ -9,7 +9,7 @@ nextProject: steps.html
 ---
 <article>
     <h2>Succeed at RMIT</h2>
-    <figure class="desktop large">
+    <figure class="desktop span4">
         <div class="img-wrapper">
             <img src="/img/screencapture-127-0-0-1-63273-index-html-2018-06-28-13_20_40.png" alt="screen shot"/>
         </div>
@@ -19,12 +19,14 @@ nextProject: steps.html
             <img src="/img/screencapture-127-0-0-1-63273-2018-06-28-13_25_01.png" alt="mobile screen shot"/>
         </div>
     </figure>
-    <div class="description">
-        <p>July&ndash;August 2014</p>
+    <div class="span3 center">
+        <p>Jul&ndash;Aug 2014 | Freelance project</p>
+        <p>This freelance project was for the design and build of an interactive form for RMIT students to complete and be provided with a list of suggested services targeted to their needs.</p>
     </div>
     <div class="full-width">
         <figure class="videoWrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/W_u99z90NqY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/W_u99z90NqY?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <figcaption>The Succeed at RMIT tool in action</figcaption>
         </figure>
     </div>
 </article>
