--- a/portfolio/aall.html
+++ b/portfolio/aall.html
@@ -9,7 +9,7 @@ nextProject: nvses.html
 ---
 <article>
     <h2>aallconfereence2017.com.au</h2>
-    <figure class="desktop">
+    <figure class="desktop span3">
         <div class="img-wrapper">
             <img src="/img/screencapture-aallconference2017-au-2018-06-11-16_47_48.png" alt="aallconference2017.com.au screen shot"/>
         </div>
@@ -22,8 +22,8 @@ nextProject: nvses.html
         </figure>
         <div class="description">
             <p><a class="goto button" href="https://aallconfereence2017.com.au/" target="_blank" title="opens in new tab">Visit site</a></p>
-            <p>Launched September 2016</p>
-            <p>An academic conference website with CMS integration.</p>
+            <p>2016 | Freelance project</p>
+            <p>An academic conference website with CMS integration&mdash;launched September 2016.</p>
         </div>
     </div>
 </article>
