--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@ nextProject: remstep.html
                 <li>Hosted on GitHub</li>
             </ul>
         </div>
+        <p>test</p>
     </div>
 </article>
