--- a/index.html
+++ b/index.html
@@ -9,30 +9,28 @@ nextProject: remstep.html
 ---
 <article>
     <h2>contemporaryVCEbiology.com</h2>
-    <figure class="desktop span3">
+    <figure class="desktop colspan3 rowspan4">
         <div class="img-wrapper">
             <img src="/img/screencapture-contemporaryvcebiology-2018-06-11-16_07_44.png" alt="contemporaryvcebiolgy.com screen shot"/>
         </div>
     </figure>
-    <div class="mobile-and-descrition">
-        <figure class="mobile">
-            <div class="img-wrapper">
-                <img src="/img/screencapture-contemporaryvcebiology-2018-06-24-16_38_51.png" alt="contemporaryvcebiolgy.com mobile screen shot"/>
-            </div>
-        </figure>
-        <div class="description">
-            <p><a class="goto button" href="https://contemporaryvcebiology.com/" target="_blank" title="opens in new tab">Visit site</a></p>
-            <p>2017&ndash;2018 | Freelance project</p>
-            <p>I been working with Academics from the Deakin University Faculty of Arts and Education to bring to life several online resources</p>
-            <p>This suite of websites aim to help VCE Biology teachers deliver contemporary units of study that are aligned with the current accredited curriculum.</p>
-            <p>This freelance project was a follow on from my work with the <a href="/portfoli/remstep.html/">ReMSTEP project</a>.</p>
-            <h3>Features</h3>
-            <ul>
-                <li>Responsive design</li>
-                <li>Static architecture</li>
-                <li>Built with Jekyll</li>
-                <li>Hosted on GitHub</li>
-            </ul>
+    <figure class="mobile">
+        <div class="img-wrapper">
+            <img src="/img/screencapture-contemporaryvcebiology-2018-06-24-16_38_51.png" alt="contemporaryvcebiolgy.com mobile screen shot"/>
         </div>
+    </figure>
+    <div class="description colspan2">
+        <p><a class="goto button" href="https://contemporaryvcebiology.com/" target="_blank" title="opens in new tab">Visit site</a></p>
+        <p>2017&ndash;2018 | Freelance project</p>
+        <p>I been working with Academics from the Deakin University Faculty of Arts and Education to bring to life several online resources</p>
+        <p>This suite of websites aim to help VCE Biology teachers deliver contemporary units of study that are aligned with the current accredited curriculum.</p>
+        <p>This freelance project was a follow on from my work with the <a href="/portfoli/remstep.html/">ReMSTEP project</a>.</p>
+        <h3>Features</h3>
+        <ul>
+            <li>Responsive design</li>
+            <li>Static architecture</li>
+            <li>Built with Jekyll</li>
+            <li>Hosted on GitHub</li>
+        </ul>
     </div>
 </article>
