--- a/portfolio/nvses.html
+++ b/portfolio/nvses.html
@@ -9,22 +9,20 @@ nextProject: succeedatrmit.html
 ---
 <article>
     <h2>nvses.edu.au</h2>
-    <figure class="desktop span3">
+    <figure class="desktop colspan3 rowspan2">
         <div class="img-wrapper">
             <img src="/img/screencapture-nvses-edu-au-2018-06-11-16_45_11.png" alt="nvses.edu.au screen shot"/>
         </div>
     </figure>
-    <div class="mobile-and-descrition">
-        <figure class="mobile">
-            <div class="img-wrapper">
-                <img src="/img/screencapture-nvses-edu-au-2018-06-25-15_16_22.png" alt="nvses.edu.au mobile screen shot"/>
-            </div>
-        </figure>
-        <div class="description">
-            <p><a class="goto button" href="http://nvses.edu.au/" target="_blank" title="opens in new tab">Visit site</a></p>
-            <p>Oct 2014&ndash;Feb 2015 | Freelance project</p>
-            <p>This project for Monash University showcases the NVSES project, which ran from 2012&ndash;2014, and distributes the units of work developed for the program as open source resources for science teachers.</p>
-            <p>The website was launched in February 2015.</p>
+    <figure class="mobile">
+        <div class="img-wrapper">
+            <img src="/img/screencapture-nvses-edu-au-2018-06-25-15_16_22.png" alt="nvses.edu.au mobile screen shot"/>
         </div>
+    </figure>
+    <div class="description colspan2">
+        <p><a class="goto button" href="http://nvses.edu.au/" target="_blank" title="opens in new tab">Visit site</a></p>
+        <p>Oct 2014&ndash;Feb 2015 | Freelance project</p>
+        <p>This project for Monash University showcases the NVSES project, which ran from 2012&ndash;2014, and distributes the units of work developed for the program as open source resources for science teachers.</p>
+        <p>The website was launched in February 2015.</p>
     </div>
 </article>
