--- a/portfolio/succeedatrmit.html
+++ b/portfolio/succeedatrmit.html
@@ -9,7 +9,7 @@ nextProject: steps.html
 ---
 <article>
     <h2>Succeed at RMIT</h2>
-    <figure class="desktop span4">
+    <figure class="desktop colspan4 rowspan2">
         <div class="img-wrapper">
             <img src="/img/screencapture-127-0-0-1-63273-index-html-2018-06-28-13_20_40.png" alt="screen shot"/>
         </div>
@@ -19,7 +19,7 @@ nextProject: steps.html
             <img src="/img/screencapture-127-0-0-1-63273-2018-06-28-13_25_01.png" alt="mobile screen shot"/>
         </div>
     </figure>
-    <div class="span3 center">
+    <div class="colspan2 d-colspan3 center">
         <p>Jul&ndash;Aug 2014 | Freelance project</p>
         <p>This freelance project was for the design and build of an interactive form for RMIT students to complete and be provided with a list of suggested services targeted to their needs.</p>
     </div>
