--- a/about-me/index.html
+++ b/about-me/index.html
@@ -7,7 +7,7 @@ description:
 ---
 <article>
     <h1>I design and build simple and elegant responsive web experiences</h1>
-    <div class="body">
+    <div class="colspan3 d-colspan3 center">
         <p class="intro">I am <b>Albert Penticoss</b>, a web designer based in <b>Melbourne, Australia</b>.</p>
         <p>I have worked in the web industry for over 10 years, with much of my time working for Universities, but also for digital agencies as both an employee and freelance contractor.</p>
         <p>I also work directly with clients under the business name Need a web guy.</p>
