--- a/contact-me/index.html
+++ b/contact-me/index.html
@@ -7,7 +7,8 @@ description:
 ---
 <article>
     <h1>Get in touch</h1>
-    <div class="body">
+    <div class="colspan3 d-colspan3 center">
         <p class="intro">If you're interested in potentionally engaging me in design and/or development work please email me at <a href="mailto:needawebguy@gmail.com">needawebguy@gmail.com</a></p>
+        <p style="margin-top: 2em;" class="text-align-center">Alternatively:&nbsp; <a href="https://www.linkedin.com/in/albertpenticoss">LinkedIn</a>&nbsp; | &nbsp;<a href="https://twitter.com/ipadisthin">Twitter</a></p>
     </div>
 </article>
