--- a/portfolio/aall.html
+++ b/portfolio/aall.html
@@ -9,21 +9,19 @@ nextProject: nvses.html
 ---
 <article>
     <h2>aallconfereence2017.com.au</h2>
-    <figure class="desktop span3">
+    <figure class="desktop colspan3 rowspan3">
         <div class="img-wrapper">
             <img src="/img/screencapture-aallconference2017-au-2018-06-11-16_47_48.png" alt="aallconference2017.com.au screen shot"/>
         </div>
     </figure>
-    <div class="mobile-and-descrition">
-        <figure class="mobile">
-            <div class="img-wrapper">
-                <img src="/img/screencapture-aallconference2017-au-2018-06-25-15_13_51.png" alt="aallconference2017.com.au mobile screen shot"/>
-            </div>
-        </figure>
-        <div class="description">
-            <p><a class="goto button" href="https://aallconfereence2017.com.au/" target="_blank" title="opens in new tab">Visit site</a></p>
-            <p>2016 | Freelance project</p>
-            <p>An academic conference website with CMS integration&mdash;launched September 2016.</p>
+    <figure class="mobile">
+        <div class="img-wrapper">
+            <img src="/img/screencapture-aallconference2017-au-2018-06-25-15_13_51.png" alt="aallconference2017.com.au mobile screen shot"/>
         </div>
+    </figure>
+    <div class="description colspan2">
+        <p><a class="goto button" href="https://aallconfereence2017.com.au/" target="_blank" title="opens in new tab">Visit site</a></p>
+        <p>2016 | Freelance project</p>
+        <p>An academic conference website with CMS integration&mdash;launched September 2016.</p>
     </div>
 </article>
