--- a/portfolio/ocis.html
+++ b/portfolio/ocis.html
@@ -9,17 +9,17 @@ nextProject: none
 ---
 <article>
     <h2>OCIS 2014</h2>
-    <figure class="desktop span3">
+    <figure class="desktop colspan3">
       <div class="img-wrapper">
         <img src="/img/ocis-mockup.png" alt="OCIS 2014 web site mockup">
       </div>
     </figure>
-    <div class="description span2">
+    <div class="description colspan2">
       <p>2014 | Freelance project</p>
       <p>Logo and web site visual design for the OCIS 2014 academic conference.</p>
     </div>
-    <h3 class="span2">Design specification</h3>
-    <figure class="span3">
+    <h3 class="colspan2" style="padding-left: 20%;">Design specification</h3>
+    <figure class="colspan3 grid3">
       <img src="/img/ocis-design-spec.png" alt="OCIS 2014 design specification">
       <img src="/img/ocis-design-spec-p2.png" alt="OCIS 2014 design specification page 2">
       <img src="/img/ocis-design-spec-p3.png" alt="OCIS 2014 design specification page 3">
