--- a/portfolio/remstep.html
+++ b/portfolio/remstep.html
@@ -9,28 +9,26 @@ nextProject: aall.html
 ---
 <article>
     <h2>remstep.org.au</h2>
-    <figure class="desktop span3">
+    <figure class="desktop colspan3 rowspan3">
         <div class="img-wrapper">
             <img src="/img/screencapture-remstep-org-au-2018-06-25-13_33_24.png" alt="remstep.org.au screen shot"/>
         </div>
     </figure>
-    <div class="mobile-and-descrition">
-        <figure class="mobile">
-            <div class="img-wrapper">
-                <img src="/img/screencapture-remstep-org-au-2018-06-25-13_34_19.png" alt="contemporaryvcebiolgy.com mobile screen shot"/>
-            </div>
-        </figure>
-        <div class="description">
-            <p><a class="goto button" href="https://remstep.org.au/" target="_blank" title="opens in new tab">Visit site</a></p>
-            <p>2014&ndash;2017 | Employee work</p>
-            <p>I worked part-time at the University of Melbourne for the ReMSTEP project from Jan 2014&ndash;Jun 2017.</p>
-            <p>I designed the project visual brand and website, evolving the website to support the various stages of the project including project launch, two conferences and final reporting of results.</p>
-            <p>I also provided:</p>
-            <ul>
-              <li>design an build of project developed online resources,</li>
-              <li>graphic design for print and digital marketing materials,</li>
-              <li>EDM design and managment (mailchimp), and</li>
-              <li>Eventbrite set up and management for conference ticket sales.</li>
+    <figure class="mobile">
+        <div class="img-wrapper">
+            <img src="/img/screencapture-remstep-org-au-2018-06-25-13_34_19.png" alt="contemporaryvcebiolgy.com mobile screen shot"/>
         </div>
+    </figure>
+    <div class="description colspan2">
+        <p><a class="goto button" href="https://remstep.org.au/" target="_blank" title="opens in new tab">Visit site</a></p>
+        <p>2014&ndash;2017 | Employee work</p>
+        <p>I worked part-time at the University of Melbourne for the ReMSTEP project from Jan 2014&ndash;Jun 2017.</p>
+        <p>I designed the project visual brand and website, evolving the website to support the various stages of the project including project launch, two conferences and final reporting of results.</p>
+        <p>I also provided:</p>
+        <ul>
+          <li>design an build of project developed online resources,</li>
+          <li>graphic design for print and digital marketing materials,</li>
+          <li>EDM design and managment (mailchimp), and</li>
+          <li>Eventbrite set up and management for conference ticket sales.</li>
     </div>
 </article>
