--- a/portfolio/steps.html
+++ b/portfolio/steps.html
@@ -9,21 +9,19 @@ nextProject: ocis.html
 ---
 <article>
     <h2>stepsproject.org.au</h2>
-    <figure class="desktop span3">
+    <figure class="desktop colspan3 rowspan2">
         <div class="img-wrapper">
             <img src="/img/screencapture-stepsproject-org-au-2018-06-28-12_59_32.png" alt="stepsproject.org.au screen shot"/>
         </div>
     </figure>
-    <div class="mobile-and-descrition">
-        <figure class="mobile">
-            <div class="img-wrapper">
-                <img src="/img/screencapture-stepsproject-org-au-2018-06-28-13_00_20.png" alt="stepsproject.org.au mobile screen shot"/>
-            </div>
-        </figure>
-        <div class="description span2">
-            <p><a class="goto button" href="http://stepsproject.org.au/" target="_blank" title="opens in new tab">Visit site</a></p>
-            <p>2013-2015 | Freelance project</p>
-            <p>I worked with the <i>School-based pedagogies and partnerships in primary science teacher education</i> (STEPS) project team to progressively build this website over the life of the project&ndash;showcasing the project and reserach publications.</p>
+    <figure class="mobile">
+        <div class="img-wrapper">
+            <img src="/img/screencapture-stepsproject-org-au-2018-06-28-13_00_20.png" alt="stepsproject.org.au mobile screen shot"/>
         </div>
+    </figure>
+    <div class="description colspan2">
+        <p><a class="goto button" href="http://stepsproject.org.au/" target="_blank" title="opens in new tab">Visit site</a></p>
+        <p>2013-2015 | Freelance project</p>
+        <p>I worked with the <i>School-based pedagogies and partnerships in primary science teacher education</i> (STEPS) project team to progressively build this website over the life of the project&ndash;showcasing the project and reserach publications.</p>
     </div>
 </article>
