make about home and pretty urls

--- a/portfolio/aall.html
+++ b/portfolio/aall.html
@@ -4,8 +4,8 @@
 layout: portfolio
 title: Portfolio | aallconfereence2017.com.au
 description:
-prevProject: remstep.html
-nextProject: nvses.html
+prevProject: remstep
+nextProject: nvses
 ---
 <article>
     <h2>aallconfereence2017.com.au</h2>
