--- a/portfolio/nvses.html
+++ b/portfolio/nvses.html
@@ -4,8 +4,8 @@
 layout: portfolio
 title: Portfolio | nvses.edu.au
 description:
-prevProject: aall.html
-nextProject: succeedatrmit.html
+prevProject: aall
+nextProject: succeedatrmit
 ---
 <article>
     <h2>nvses.edu.au</h2>
