--- a/portfolio/remstep.html
+++ b/portfolio/remstep.html
@@ -4,8 +4,8 @@
 layout: portfolio
 title: Portfolio | remstep.org.au
 description:
-prevProject: index.html
-nextProject: aall.html
+prevProject: index
+nextProject: aall
 ---
 <article>
     <h2>remstep.org.au</h2>
