--- a/portfolio/steps.html
+++ b/portfolio/steps.html
@@ -4,8 +4,8 @@
 layout: portfolio
 title: Portfolio | stepsproject.org.au
 description:
-prevProject: succeedatrmit.html
-nextProject: ocis.html
+prevProject: succeedatrmit
+nextProject: ocis
 ---
 <article>
     <h2>stepsproject.org.au</h2>
