--- a/portfolio/succeedatrmit.html
+++ b/portfolio/succeedatrmit.html
@@ -4,8 +4,8 @@
 layout: portfolio
 title: Portfolio | Succeed at RMIT
 description:
-prevProject: nvses.html
-nextProject: steps.html
+prevProject: nvses
+nextProject: steps
 ---
 <article>
     <h2>Succeed at RMIT</h2>
