--- a/index.html
+++ b/index.html
@@ -1,36 +1,16 @@
 ---
 #Jekyll front matter
 
-layout: portfolio
-title: Need a web guy
-description: Freelance web design by Albert J Penticoss
-prevProject: none
-nextProject: remstep.html
+title: About me
+description:
+
 ---
 <article>
-    <h2>contemporaryVCEbiology.com</h2>
-    <figure class="desktop colspan3 rowspan4">
-        <div class="img-wrapper">
-            <img src="/img/screencapture-contemporaryvcebiology-2018-06-11-16_07_44.png" alt="contemporaryvcebiolgy.com screen shot"/>
-        </div>
-    </figure>
-    <figure class="mobile">
-        <div class="img-wrapper">
-            <img src="/img/screencapture-contemporaryvcebiology-2018-06-24-16_38_51.png" alt="contemporaryvcebiolgy.com mobile screen shot"/>
-        </div>
-    </figure>
-    <div class="description colspan2">
-        <p><a class="goto button" href="https://contemporaryvcebiology.com/" target="_blank" title="opens in new tab">Visit site</a></p>
-        <p>2017&ndash;2018 | Freelance project</p>
-        <p>I been working with Academics from the Deakin University Faculty of Arts and Education to bring to life several online resources</p>
-        <p>This suite of websites aim to help VCE Biology teachers deliver contemporary units of study that are aligned with the current accredited curriculum.</p>
-        <p>This freelance project was a follow on from my work with the <a href="/portfoli/remstep.html/">ReMSTEP project</a>.</p>
-        <h3>Features</h3>
-        <ul>
-            <li>Responsive design</li>
-            <li>Static architecture</li>
-            <li>Built with Jekyll</li>
-            <li>Hosted on GitHub</li>
-        </ul>
+    <h1>I design and build simple and elegant responsive web experiences</h1>
+    <div class="colspan3 d-colspan3 center">
+        <p class="intro">I am <b>Albert Penticoss</b>, a web designer based in <b>Melbourne, Australia</b>.</p>
+        <p>I have worked in the web industry for over 10 years, with much of my time working for Universities, but also for digital agencies as both an employee and freelance contractor.</p>
+        <p>I also work directly with clients under the business name Need a web guy.</p>
+        <p>I specialise in design and writing HTML and CSS. I use Javascript (mainly JQuery) minimally as required for the solution.</p>
     </div>
 </article>
