--- a/portfolio/ocis.html
+++ b/portfolio/ocis.html
@@ -4,7 +4,7 @@
 layout: portfolio
 title: Portfolio | OCIS 2014
 description:
-prevProject: steps.html
+prevProject: steps
 nextProject: none
 ---
 <article>
