--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,7 @@ nextProject: remstep
     <h2>contemporaryVCEbiology.com</h2>
     <figure class="desktop colspan3 rowspan4">
         <div class="img-wrapper">
-            <img src="/img/screencapture-contemporaryvcebiology-2018-06-11-16_07_44.png" alt="contemporaryvcebiolgy.com screen shot"/>
+            <img width="500" src="/img/screencapture-contemporaryvcebiology-2018-06-11-16_07_44.png" alt="contemporaryvcebiolgy.com screen shot"/>
         </div>
     </figure>
     <figure class="mobile">
