--- a/portfolio/remstep.html
+++ b/portfolio/remstep.html
@@ -11,7 +11,7 @@ nextProject: aall
     <h2>remstep.org.au</h2>
     <figure class="desktop colspan3 rowspan3">
         <div class="img-wrapper">
-            <img src="/img/screencapture-remstep-org-au-2018-06-25-13_33_24.png" alt="remstep.org.au screen shot"/>
+            <img width="500" src="/img/screencapture-remstep-org-au-2018-06-25-13_33_24.png" alt="remstep.org.au screen shot"/>
         </div>
     </figure>
     <figure class="mobile">
