--- a/portfolio/aall.html
+++ b/portfolio/aall.html
@@ -22,6 +22,13 @@ nextProject: nvses
     <div class="description colspan2">
         <p><a class="goto button" href="https://aallconfereence2017.com.au/" target="_blank" title="opens in new tab">Visit site</a></p>
         <p>2016 | Freelance project</p>
-        <p>An academic conference website with CMS integration&mdash;launched September 2016.</p>
+        <p>An academic conference website with Content Management System (CMS) integration&mdash;launched September 2016.</p>
+        <h3>Features</h3>
+        <ul>
+            <li>Responsive design</li>
+            <li>Static architecture</li>
+            <li>Built with Jekyll</li>
+            <li>CloudCannon Content Management System (CMS) integration</li>
+        </ul>
     </div>
 </article>
