--- a/portfolio/remstep.html
+++ b/portfolio/remstep.html
@@ -30,5 +30,12 @@ nextProject: aall
           <li>graphic design for print and digital marketing materials,</li>
           <li>EDM design and managment (mailchimp), and</li>
           <li>Eventbrite set up and management for conference ticket sales.</li>
+        </ul>
+        <h3>Features</h3>
+        <ul>
+            <li>Responsive design</li>
+            <li>Static architecture</li>
+            <li>Built with Jekyll</li>
+        </ul>
     </div>
 </article>
