--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,7 @@ nextProject: remstep
     <div class="description colspan2">
         <p><a class="goto button" href="https://contemporaryvcebiology.com/" target="_blank" title="opens in new tab">Visit site</a></p>
         <p>2017&ndash;2018 | Freelance project</p>
-        <p>I been working with Academics from the Deakin University Faculty of Arts and Education to bring to life several online resources</p>
+        <p>I worked with Academics from the Deakin University Faculty of Arts and Education to bring to life several online resources</p>
         <p>This suite of websites aim to help VCE Biology teachers deliver contemporary units of study that are aligned with the current accredited curriculum.</p>
         <p>This freelance project was a follow on from my work with the <a href="/portfoli/remstep.html/">ReMSTEP project</a>.</p>
         <h3>Features</h3>
