--- a/portfolio/nvses.html
+++ b/portfolio/nvses.html
@@ -24,5 +24,10 @@ nextProject: succeedatrmit
         <p>Oct 2014&ndash;Feb 2015 | Freelance project</p>
         <p>This project for Monash University showcases the NVSES project, which ran from 2012&ndash;2014, and distributes the units of work developed for the program as open source resources for science teachers.</p>
         <p>The website was launched in February 2015.</p>
+        <h3>Features</h3>
+        <ul>
+          <li>Responsive design</li>
+          <li>Static architecture</li>
+        </ul>
     </div>
 </article>
