--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,26 +5,33 @@ layout: portfolio
 title: Need a web guy
 description: Freelance web design by Albert J Penticoss
 prevProject: none
-nextProject: remstep
+nextProject: cvb
 ---
 <article>
-    <h2>contemporaryVCEbiology.com</h2>
+    <h2>100jobsofthefuture.com</h2>
     <figure class="desktop colspan3 rowspan4">
         <div class="img-wrapper">
-            <img width="500" src="/img/screencapture-contemporaryvcebiology-2018-06-11-16_07_44.png" alt="contemporaryvcebiolgy.com screen shot"/>
+            <img width="500" src="/img/screencapture-100jobsofthefuture-2019-08-04-12_02_07.png" alt="100jobsofthefuture.com screen shot"/>
         </div>
     </figure>
     <figure class="mobile">
         <div class="img-wrapper">
-            <img src="/img/screencapture-contemporaryvcebiology-2018-06-24-16_38_51.png" alt="contemporaryvcebiolgy.com mobile screen shot"/>
+            <img src="/img/screencapture-100jobsofthefuture-2019-08-04-12_07_08.png" alt="100jobsofthefuture.com mobile screen shot"/>
         </div>
     </figure>
     <div class="description colspan2">
-        <p><a class="goto button" href="https://contemporaryvcebiology.com/" target="_blank" title="opens in new tab">Visit site</a></p>
-        <p>2017&ndash;2018 | Freelance project</p>
-        <p>I worked with Academics from the Deakin University Faculty of Arts and Education to bring to life several online resources</p>
-        <p>This suite of websites aim to help VCE Biology teachers deliver contemporary units of study that are aligned with the current accredited curriculum.</p>
-        <p>This freelance project was a follow on from my work with the <a href="/portfoli/remstep.html/">ReMSTEP project</a>.</p>
+        <p><a class="goto button" href="https://100jobsofthefuture.com/" target="_blank" title="opens in new tab">Visit site</a></p>
+        <p>2019 | Freelance project</p>
+        <p>I worked with Academics from the Deakin University and Griffith University in liaison with Ford Australia PR to create:
+        <ul>
+          <li>the logo and visual brand for this project's report;</li>
+          <li>graphic design and layout for the print version of report;</li>
+          <li>the project website which includes:
+            <ul>
+              <li>Online version of the report, and</li>
+              <li>Job explorer tool - a tool for discovering future jobs aligned with your interests;</li>
+            </ul>
+          </li>
         <h3>Features</h3>
         <ul>
             <li>Responsive design</li>
