--- a/portfolio/remstep.html
+++ b/portfolio/remstep.html
@@ -4,7 +4,7 @@
 layout: portfolio
 title: Portfolio | remstep.org.au
 description:
-prevProject: index
+prevProject: cvb
 nextProject: aall
 ---
 <article>
@@ -20,7 +20,7 @@ nextProject: aall
         </div>
     </figure>
     <div class="description colspan2">
-        <p><a class="goto button" href="https://remstep.org.au/" target="_blank" title="opens in new tab">Visit site</a></p>
+        <p><a class="goto button" href="http://remstep.org.au/" target="_blank" title="opens in new tab">Visit site</a></p>
         <p>2014&ndash;2017 | Employee work</p>
         <p>I worked part-time at the University of Melbourne for the ReMSTEP project from Jan 2014&ndash;Jun 2017.</p>
         <p>I designed the project visual brand and website, evolving the website to support the various stages of the project including project launch, two conferences and final reporting of results.</p>
