--- a/portfolio/succeedatrmit.html
+++ b/portfolio/succeedatrmit.html
@@ -25,7 +25,7 @@ nextProject: steps
     </div>
     <div class="full-width">
         <figure class="videoWrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/W_u99z90NqY?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TwYSyYX3A0Y?si=5odHFEbJv_AFeVgk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <figcaption>The Succeed at RMIT tool in action</figcaption>
         </figure>
     </div>
